Fixed compatibility issues with Internet Explorer & Edge Modified look, detect IE and add "onChange" events for sliders, fix spacing for numbers and text inputs in IE, made the postTrigger Slider look right in IE and Edge, fixed numeric calculation on settings screen in IE (changed all "*.valueAsNumber" to "parseInt(*.value)", added manual refresh button to Settings screen for browsers that don't get server events (like Edge & IE)

--- a/src/css/sizeAndSpacing.css
+++ b/src/css/sizeAndSpacing.css
@@ -850,6 +850,24 @@ a.innerDropDown.active:before {
 #startMarker::-webkit-slider-thumb { border-right: 0; border-top-color: green; border-left-width: 15px; margin-top: -30px; }
 #endMarker::-webkit-slider-thumb { border-left: 0; border-top-color: #a00; border-right-width: 15px; margin-top: -30px; }
 
+
+#backgroundThing {
+	display: block;
+	box-sizing: border-box;
+	width: 99.5%;
+	height: 20px;
+	margin-top: -22px;
+	background-color: #a00;
+	border: 0px solid black;
+	border-radius: 5px;
+}
+
+#postTriggerSlider {
+	background-color: #ddd;
+	background-image: none;
+	width: 98%;
+}
+
 .coverageText {
 	position: absolute;
 	padding: 2px 24px;
